samples/_failures_safe/1761366107_7321f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_566501df.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
